Fix link to CV generator

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aanwar-portfolio",
-  "homepage": "https://www.aanwar.cyou",
+  "homepage": "https://www.aanwar.cyou/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
