--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
 jobs:
-  publish-gpr:
+  deploy-gh-pages:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: 14
       - run: npm ci
-      - run: npm deploy
+      - run: npm run deploy
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
