Fix GitHub CI file

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - master
 jobs:
-  build:
-    name: Build
+  deploy-gh-pages:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,25 +17,8 @@ jobs:
           node-version: 14
       - run: npm ci
       - run: npm run build
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
         name: production-files
         path: ./build
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: production-files
-          path: ./build
-
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
